fix: test fix broken css styles in production

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,7 +7,7 @@ h1, h2, h3, h4, h5, h6 {
     background-position: 30% 25%;
     background-size: cover;
     /* background-color: rgb(53, 213, 53); */
-    height:100vh;
+    min-height:100vh;
 }
 
 .hero-content {
